# lqg-crt-gpu

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  generate_prime_table  generate_prime_table.cpp  precompute_garner_inverses  precompute_garner_inverses.cpp  setup.sh  setup_50k_primes.sh  setup_colab.sh
data/: download_large_tables.sh  notes.md
include/: bigint_utils.hpp  cgbn_benchmark.hpp  cgbn_utils.hpp  crt.hpp  crt_cgbn.hpp  crt_cgbn_kernels.cuh  crt_config.hpp  crt_cpu.hpp  crt_garner.hpp  crt_gpu_kernels.cuh  crt_host_helpers.hpp  crt_math.hpp  crt_product_tree.hpp  crt_utils.hpp  cuda_utils.hpp  divisors.hpp  garner_inv_k10000.hpp  garner_inv_k1024.hpp  garner_inv_k128.hpp  garner_inv_k16.hpp  garner_inv_k2048.hpp  garner_inv_k25000.hpp  garner_inv_k256.hpp  garner_inv_k32.hpp  garner_inv_k5000.hpp  garner_inv_k50000.hpp  garner_inv_k512.hpp  garner_inv_k64.hpp  gpu_kernels.cuh  modular_arithmetic.hpp  optimal_primes.hpp  primes.hpp  timing.hpp  types.hpp
src/: cgbn_benchmark.cpp  cgbn_impl.cu  crt.cpp  crt_cgbn.cu  crt_cgbn_error.cu  crt_cpu.cpp  crt_gpu.cu  divisors.cpp  garner_table.cpp  gpu_kernels.cu  main.cpp  main.cu  modular_arithmetic.cpp  optimal_primes_data.cpp  primes.cpp  warmup.cu  warmup.cuh
